Bug 131370 - FILESAVE XLSX Show the legend without overlapping the chart option changes to default after export
Summary: FILESAVE XLSX Show the legend without overlapping the chart option changes to...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-03-16 07:33 UTC by NISZ LibreOffice Team
Modified: 2020-04-16 11:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc. (12.03 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-03-16 07:36 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc. (6.85 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-03-16 07:37 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Calc. (65.25 KB, image/png)
2020-03-16 07:37 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-03-16 07:33:44 UTC
Description:
Show the legend without overlapping the chart option changes to default when the document is saved in XLSX format.

Steps to Reproduce:
    1. Create a new document in LibreOffice Calc.
    2. Insert a chart with legend.
    3. Choose Format->Legend.
    4. Click Position tab.
    5. Disable Show the legend without overlapping the chart.
    6. Save the file as XLSX.
    7. Reload the file.

Actual Results:
The legend doesn’t overlap the chart.

Expected Results:
The legend should be overlap the chart.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: cba20762aba9abf17e94790e1bd99e1293050385
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Vulkan; VCL: win;
Locale: hu-HU (hu_HU); UI-Language: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2020-03-16 07:36:14 UTC
Created attachment 158708 [details]
Example file from Calc.
Comment 2 NISZ LibreOffice Team 2020-03-16 07:37:03 UTC
Created attachment 158709 [details]
The original file saved by Calc.
Comment 3 NISZ LibreOffice Team 2020-03-16 07:37:50 UTC
Created attachment 158710 [details]
Screenshot of the problem in Calc.
Comment 4 Commit Notification 2020-03-30 10:46:49 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab40a7843a66d1fe276224db16ddaecd538df234

tdf#131370 chart: implement OOXML import/export of legend overlay feature

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.