tdf#131370 chart: implement OOXML import/export of legend overlay feature

Follow-up of the following commits related to the new UNO property
Overlay for legends:

commit 9fab1ba8ddc59924c633aa17c65f7330a4762726
(tdf#75330 add a new overlay/no-overlay feature for the legend)

commit 65123d41f62597053bc3893ee4fb46868a6b1f2d
(tdf#75330 chart: implement ODF import/export of legend overlay feature)

Change-Id: Ie3eff9b8a4f99980a7ae28add909a27eb0e9d14b