oox/inc/drawingml/chart/titlemodel.hxx
@@ -80,7 +80,7 @@ struct LegendModel
     sal_Int32           mnPosition;         /// Legend position.
     bool                mbOverlay;          /// True = legend may overlay other objects.
 
-    explicit            LegendModel(bool bMSO2007Doc);
+    explicit            LegendModel();
                         ~LegendModel();
 };
 
